--- a/templates/item.html
+++ b/templates/item.html
@@ -1,4 +1,5 @@
-<html>
+
+{% include 'header.html' %}
 	<div class="item">
 		
 		<h2>{{item.name}}</h2>
@@ -25,4 +26,3 @@
 		</p>
 	</div>
 {% include 'footer.html' %}
-</html>
